# LeStudio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.ko.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
.omx/: metrics.json
.omx/logs/: turns-2026-02-22.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
docs/: design-phase-0-1.md  design-phase-1.md  gui-redesign-workbench.md  mapping-tab-arm-ux-design.md  oss-spread-constraints-backup.md  release-checklist.md  roadmap.md  troubleshooting.md
docs/private/: INDEX.md  README.md  dataset-feature-adoption-plan.md  roadmap.md  (+12 more)
docs_public/: api-and-streaming.md  architecture.md  contributing.md  getting-started.md  hardware.md  index.md  installation.md  troubleshooting.md  workflow.md
frontend/: eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
notebooks/: lerobot_train.ipynb
tests/: test_calibrate_bridge.py  test_calibration_validator.py  test_command_builders.py  test_device_registry.py  test_feetech_serial_trace.py  test_motor_setup_bridge.py  test_path_policy.py  test_process_manager.py  test_server_auth.py  test_server_helpers.py  test_server_routes.py  test_server_runtime_regressions.py  test_service_integrity.py  test_so_drive_modes.py  test_teleop_bridge.py  test_type_policy.py
(+404 files in other folders)
